--- a/wesport/templates/booking.html
+++ b/wesport/templates/booking.html
@@ -18,7 +18,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <form action="{{ url_for('player.cancel', event_id=booking.id) }}" method="POST">
+            <form action="{{ url_for('club.cancel_booking', booking_id=booking.id) }}" method="POST">
                 <input class="btn btn-danger" type="submit" value="Delete">
             </form>
           </div>
