--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>WeSport - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>WeSport</title>
     {% endif %}
 </head>
 <body>
