--- a/wesport/templates/book.html
+++ b/wesport/templates/book.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+        <div id="map"></div><br>
         <div class="content-section">
             <form method="post" action="">
                 {{ form.hidden_tag() }}
@@ -28,7 +29,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.date(class="form-control form-control-lg") }}
+                            <input type="date" value={{ form.date(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
@@ -106,7 +107,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.players(class="form-control form-control-lg") }}
+                            <ul class="form-group" value={{ form.players(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
                 </fieldset>
@@ -124,7 +125,7 @@
 
                     fetch('/clubs/' + sport).then(function (response) {
                         response.json().then(function (data) {
-                            let optionHTML = '';
+                            let optionHTML = '<option value="0">---select option---</option>';
 
                             for (let club of data.clubs) {
                                 optionHTML += '<option value="' + club.id + '">' + club.name + '</option>';
@@ -133,15 +134,15 @@
 
                         });
                     });
-                }
+                };
 
                 club_select.onchange = function () {
                     club = club_select.value;
-                    sport = sport_select.value
+                    sport = sport_select.value;
 
                     fetch('/field/' + club + '/' + sport).then(function (response) {
                         response.json().then(function (data) {
-                            let optionHTML = '';
+                            let optionHTML = '<option value="0">---select option---</option>';
 
                             for (let field of data.fields) {
                                 optionHTML += '<option value="' + field.id + '">' + field.name + '</option>';
@@ -152,6 +153,47 @@
                     });
                 }
             </script>
+            <script> // to be modified and improved
+                var lat = {{ lat }};
+                  var lon = {{ lon }};
+                  var markers = {{ markers }};
+                  var marker, i;
+                  var map;
+                  var infowindow = new google.maps.InfoWindow();
+
+                  function initMap() {
+
+                      // Map Options
+                      var options = {
+                          center: {lat: lat, lng: lon},
+                          zoom: 12
+                      };
+
+                      // New map
+                      map = new google.maps.Map(document.getElementById('map'), options);
+
+                      // add multiple markers
+                      for (i = 0; i < markers.length; i++) {
+                          marker = new google.maps.Marker({
+                              position: new google.maps.LatLng(markers[i][0], markers[i][1]),
+                              map: map
+                          });
+
+                          google.maps.event.addListener(marker, 'click', (function(marker) {
+                          return function() {
+                              var infoWindow = new google.maps.InfoWindow({
+                                    content:props.content
+                              });
+
+                              marker.addListener('click', function(){
+                                    infoWindow.open(map, marker);
+                              });
+                          }
+                          })(marker));
+                      }
+                  }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCNB6dLAqToK9fbYsZKIHxreBLPGcn9so&callback=initMap" async defer></script>
         </div>
 {% endblock content %}
 
