--- a/wesport/templates/club_home.html
+++ b/wesport/templates/club_home.html
@@ -15,11 +15,26 @@
         {% for booking in bookings %}
             <div>
                 <h2><a class="article-title" href="{{  url_for('club.booking', booking_id=booking.id) }}" target="_blank">{{ booking.field_name}}</a></h2>
-                <p class="article-content">Date : {{ booking.date }}</p>
-                <p class="article-content">From : {{ booking.startTime }}</p>
-                <p class="article-content">To : {{ booking.endTime }}</p>
-
+                <p class="article-content">Date : {{ booking.date.strftime("%d-%m-%Y") }}</p>
+                <p class="article-content">From {{ booking.startTime }} to {{ booking.endTime }}</p>
             </div>
         {% endfor %}
     </fieldset>
 {% endblock content %}
+{% block right_content %}
+    <h3>My Sidebar</h3>
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ image_file }}">
+            <div class="media-body">
+              <h2 class="account-heading">{{current_user.username}}</h2>
+              <p class="text-secondary">{{ current_user.email }}</p>
+            </div>
+        </div>
+        <ul class="list-group">
+            <a class="list-group-item list-group-item-light" href="{{ url_for('club.add_field') }}">Add Field</a>
+            <li class="list-group-item list-group-item-light">Latest Posts</li>
+            <li class="list-group-item list-group-item-light">Announcements</li>
+            <li class="list-group-item list-group-item-light">Calendars</li>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('main.account') }}">Settings</a>
+        </ul>
+{% endblock %}
