--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -1,34 +1,108 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h2>Hello {{ player.name}}, {{ player.surname }} !</h2> <br>
+    <h2>Hello Mr.{{ player.name}}, {{ player.surname }} !</h2> <br>
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">My Bookings</legend>
         {% for event in bookings %}
-            <div>
+            <div class="content-section">
                 <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                <p class="article-content">Date: {{ event.date }}</p>
+                {% for field in fields %}
+                    {% if field.id == event.field_id  %}
+                        {% for club in clubs %}
+                            {% if club.id == field.club_id %}
+                                <small>
+                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
                 <p class="article-content">Start Time: {{ event.startTime }}</p>
+                {% for participants in participants %}
+                    {% if participants.booking == event.id %}
+                        <div>
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         {% endfor %}
     </fieldset>
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">My Events</legend>
         {% for event in myevents %}
-            <div>
+            <div class="content-section">
                 <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                <p class="article-content">Date: {{ event.date }}</p>
+                {% for field in fields %}
+                    {% if field.id == event.field_id  %}
+                        {% for club in clubs %}
+                            {% if club.id == field.club_id %}
+                                <small>
+                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <p class="article-content">Date: {{ event.date.strftime("%d-%m-Y") }}</p>
                 <p class="article-content">Start Time: {{ event.startTime }}</p>
+                {% for participants in participants %}
+                    {% if participants.booking == event.id %}
+                        <div>
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         {% endfor %}
     </fieldset>
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">Public events</legend>
         {% for event in events %}
-            <div>
+            <div class="content-section">
                 <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                <p class="article-content">Date: {{ event.date }}</p>
+                {% for field in fields %}
+                    {% if field.id == event.field_id  %}
+                        {% for club in clubs %}
+                            {% if club.id == field.club_id %}
+                                <small>
+                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <p class="article-content">Date: {{ event.date.strftime("%d-%m-Y") }}</p>
                 <p class="article-content">Start Time: {{ event.startTime }}</p>
+                {% for participants in participants %}
+                    {% if participants.booking == event.id %}
+                        <div>
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         {% endfor %}
     </fieldset>
 {% endblock content %}
+{% block right_content %}
+    <h3>My Sidebar</h3>
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ image_file }}">
+            <div class="media-body">
+              <h2 class="account-heading">{{current_user.username}}</h2>
+              <p class="text-secondary">{{ current_user.email }}</p>
+            </div>
+        </div>
+        <ul class="list-group">
+            <a class="list-group-item list-group-item-light" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
+            <li class="list-group-item list-group-item-light">My Bookings</li>
+            <li class="list-group-item list-group-item-light">My Events</li>
+            <li class="list-group-item list-group-item-light">Public Events</li>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('main.account') }}">Settings</a>
+        </ul>
+{% endblock %}
