--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -75,7 +75,8 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            {% block content %}{% endblock %} <!--main page content block-->
+            {% block content %}
+            {% endblock %} <!--main page content block-->
         </div>
         <div class="col-md-4">
           <div class="content-section">
